--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
     <title>Fruits</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.5.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
-    <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/7c95244400.js" crossorigin="anonymous"></script>
-    <!-- Custom Color -->
     <script>
         tailwind.config = {
             theme: {
@@ -34,7 +31,6 @@
 
 <body class="font-lato">
     <header class="md:container md:mx-auto">
-        <!-- Nav bar -->
         <nav class="pt-5">
             <div class="grid grid-cols-2 lg:grid-cols-3 navbar bg-base-100 bg-[#F85559] rounded-full h-28">
                 <div class="navbar-center hidden lg:flex">
@@ -73,9 +69,7 @@
                 </div>
             </div>
         </nav>
-        <!-- Slider or Carousel -->
         <div class="carousel w-full lg:h-[550px] bg-bike-primary-bg">
-            <!-- Slide 1 -->
             <div id="slide1" class="carousel-item relative w-full">
                 <div class="hero min-h-screen mt-8" style="background-image: url(./images/banner1.png);">
                     <div class="hero-overlay bg-opacity-70 contrast-200"></div>
@@ -93,8 +87,6 @@
                     <a href="#slide2" class="btn btn-circle">❯</a>
                 </div>
             </div>
-
-            <!-- Slide 2 -->
             <div id="slide2" class="carousel-item relative w-full">
                 <div class="hero min-h-screen mt-8" style="background-image: url(./images/banner2.png);">
                     <div class="hero-overlay bg-opacity-70 contrast-200"></div>
@@ -112,7 +104,6 @@
                     <a href="#slide3" class="btn btn-circle">❯</a>
                 </div>
             </div>
-            <!-- Slide 3 -->
             <div id="slide3" class="carousel-item relative w-full">
                 <div class="hero min-h-screen mt-8" style="background-image: url(./images/banner3.png);">
                     <div class="hero-overlay bg-opacity-70 contrast-200"></div>
@@ -130,7 +121,6 @@
                     <a href="#slide4" class="btn btn-circle">❯</a>
                 </div>
             </div>
-            <!-- Slide 4 -->
             <div id="slide4" class="carousel-item relative w-full">
                 <div class="hero min-h-screen mt-8" style="background-image: url(./images/banner4.png);">
                     <div class="hero-overlay bg-opacity-70 contrast-200"></div>
@@ -149,35 +139,33 @@
                 </div>
             </div>
         </div>
-        <!-- Sub-Banner -->
         <div
             class="flex justify-center mt-2 top-[575px] left-72 items-center h-48 absolute z-20 p-10 rounded-lg border-2 bg-white shadow-black">
             <div class="grid grid-cols-5 justify-center gap-5 text-center">
                 <div>
-                    <img src="./images/fruit1.png" alt="">
+                    <img src="./images/fruit1.png">
                     <p>Grape</p>
                 </div>
                 <div>
-                    <img src="./images/fruit2.png" alt="">
+                    <img src="./images/fruit2.png">
                     <p>Orange</p>
                 </div>
                 <div>
-                    <img src="./images/fruit3.png" alt="">
+                    <img src="./images/fruit3.png">
                     <p>Mango</p>
                 </div>
                 <div>
-                    <img src="./images/fruit4.png" alt="">
+                    <img src="./images/fruit4.png">
                     <p>Strawberry</p>
                 </div>
                 <div>
-                    <img src="./images/fruit5.png" alt="">
+                    <img src="./images/fruit5.png">
                     <p>Pomegranate</p>
                 </div>
             </div>
         </div>
     </header>
     <main>
-        <!-- Deal of the day Section -->
         <section class="mt-60 px-52">
             <div class="flex justify-between">
                 <div>
@@ -227,9 +215,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Card Section -->
             <section class="flex justify-center px-60 gap-4 mb-12">
-                <!-- 1st Card -->
                 <div>
                     <div class="card w-[250px] h-[420px] border border-[#12121219]">
                         <figure class="px-10 pt-10">
@@ -237,10 +223,6 @@
                         </figure>
                         <div class="card-body items-center text-center">
                             <h2 class="card-title">12.90$ - 18.85$</h2>
-                            <!-- Divider -->
-                            <div class="flex flex-col w-full">
-                                <div class="divider"></div>
-                            </div>
                             <p>Apples</p>
                             <div class="rating">
                                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
@@ -252,7 +234,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- 2nd Card -->
                 <div>
                     <div class="card w-[250px] h-[420px] border border-[#12121219]">
                         <figure class="px-10 pt-10">
@@ -260,9 +241,6 @@
                         </figure>
                         <div class="card-body items-center text-center">
                             <h2 class="card-title">12.90$ - 18.85$</h2>
-                            <div class="flex flex-col w-full">
-                                <div class="divider"></div>
-                            </div>
                             <p>Orange</p>
                             <div class="rating">
                                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
@@ -274,7 +252,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- 3rd Card -->
                 <div>
                     <div class="card w-[250px] h-[420px] border border-[#12121219]">
                         <figure class="px-10 pt-10">
@@ -282,9 +259,6 @@
                         </figure>
                         <div class="card-body items-center text-center">
                             <h2 class="card-title">12.90$ - 18.85$</h2>
-                            <div class="flex flex-col w-full">
-                                <div class="divider"></div>
-                            </div>
                             <p>Red Dragon</p>
                             <div class="rating">
                                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
@@ -296,7 +270,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- 4th Card -->
                 <div>
                     <div class="card w-[250px] h-[420px] border border-[#12121219]">
                         <figure class="px-10 pt-10">
@@ -304,9 +277,6 @@
                         </figure>
                         <div class="card-body items-center text-center">
                             <h2 class="card-title">12.90$ - 18.85$</h2>
-                            <div class="flex flex-col w-full">
-                                <div class="divider"></div>
-                            </div>
                             <p>Banana</p>
                             <div class="rating">
                                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
@@ -323,11 +293,10 @@
                 <button class="btn bg-[#F85559] text-white">Shop All</button>
             </div>
         </section>
-        <!-- Meet the team Section -->
         <section>
             <div class="card w-[1440px] h-[640px] px-52 mb-36 rounded-lg image-full contrast-125 opacity-85">
                 <figure>
-                    <img src="./images/team.png" alt="" class="" />
+                    <img src="./images/team.png" />
                 </figure>
                 <div class="card-body">
                     <div class="grid justify-center">
@@ -338,7 +307,6 @@
                             Latin literature from 45 BC, making it over 2000 years old.</p>
                     </div>
                     <div class="flex justify-center gap-12 px-20">
-                        <!-- 1st Member -->
                         <div class="text-center">
                             <img src="./images/member1.png" alt="" class="w-36 h-36 rounded-full mb-5">
                             <h4 class="text-2xl font-bold">Awlad Hossain</h4>
@@ -347,7 +315,6 @@
                             <i class="fa-brands fa-square-twitter mr-1" style="color: #F85559;"></i>
                             <i class="fa-brands fa-linkedin" style="color: #F85559;"></i>
                         </div>
-                        <!-- 2nd Member -->
                         <div class="text-center">
                             <img src="./images/member2.png" alt="" class="w-36 h-36 rounded-full mb-5">
                             <h4 class="text-2xl font-bold">Safia Chowdhury</h4>
@@ -356,7 +323,6 @@
                             <i class="fa-brands fa-square-twitter mr-1" style="color: #F85559;"></i>
                             <i class="fa-brands fa-linkedin" style="color: #F85559;"></i>
                         </div>
-                        <!-- 3rd Member -->
                         <div class="text-center">
                             <img src="./images/member3.png" alt="" class="w-36 h-36 rounded-full mb-5">
                             <h4 class="text-2xl font-bold">Rokib Hossain</h4>
@@ -365,7 +331,6 @@
                             <i class="fa-brands fa-square-twitter mr-1" style="color: #F85559;"></i>
                             <i class="fa-brands fa-linkedin" style="color: #F85559;"></i>
                         </div>
-                        <!-- 4th Member -->
                         <div class="text-center">
                             <img src="./images/member4.png" alt="" class="w-36 h-36 rounded-full mb-5">
                             <h4 class="text-2xl font-bold">Chaity</h4>
@@ -378,7 +343,6 @@
                 </div>
             </div>
         </section>
-        <!-- Why Choose? -->
         <section>
             <div class="text-center">
                 <h2 class="text-5xl font-extrabold pb-6">Why Choose Us</h2>
@@ -388,7 +352,6 @@
             <div>
                 <div>
                     <div class="grid flex-col lg:grid-cols-3 justify-between items-center px-28 py-24">
-                        <!-- 1st Column -->
                         <div>
                             <div
                                 class="flex flex-row justify-between items-center rounded-3xl bg-white pb-10 gap-x-7 w-96">
@@ -420,11 +383,9 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- 2nd Column -->
                         <div>
                             <img class="max-w-7xl max-h-80" src="./images/whychoose1.png" alt="">
                         </div>
-                        <!-- 3rd Column -->
                         <div>
                             <div class="flex flex-row justify-between items-center rounded-3xl bg-white gap-x-7 w-96">
                                 <div class="flex flex-col items-end text-right">
@@ -463,7 +424,7 @@
     </main>
     <footer class="footer footer-center p-10 bg-black text-base-content rounded">
         <div class="flex text-white">
-            <img src="./images/logo.png" alt="">
+            <img src="./images/logo.png">
             <p>Fruit Burst</p>
         </div>
         <div class="grid grid-flow-col gap-4 text-white">
